# CowTalk

./: CowTalk.gemspec  README.md  Rakefile
cpp/: CMakeLists.txt  cowtalk.cc  cowtalk.h  cowtalk.hpp  cowtalkapp.c
ext/cowtalk/: cowtalk_native.cpp  extconf.rb
ext/cowtalk/include/: cowtalk.h
rb/ext/cowtalk/: cowtalk.c  extconf.rb
